--- a/r_files/eda.rmd
+++ b/r_files/eda.rmd
@@ -1,7 +1,7 @@
 
 
 ```{r}
-metalworking |> 
+complete_data |> 
   group_by(part_id, part_name) |> 
   summarize(
     total_quantity_shipped = sum(total_quantity_shipped, na.rm = TRUE),
@@ -15,8 +15,55 @@ metalworking |>
     number_of_jobs = min(number_of_jobs_by_part, na.rm = TRUE)
   ) |> 
   #arrange(desc(total_quantity_shipped))
-   arrange(desc(estimated_revenue_per_hour))
+   arrange(desc(est_prod_hours))
 ```
+
+
+
+
+
+
+```{r}
+
+metalworking |> 
+  summarize(cor_value = cor(estimated_revenue_per_hour, total_quantity_shipped, use = 'complete.obs'))
+
+```
+
+
+
+```{r}
+plot_ly(
+  revenue_data,
+  x = ~total_quantity_shipped,
+  y = ~estimated_revenue_per_hour,
+  size = ~total_revenue,
+  color = ~part_name,
+  text = ~paste(
+    "Part Name: ", part_name, "<br>",
+    "Quantity Shipped: ", total_quantity_shipped, "<br>",
+    "Revenue per Hour: $", round(estimated_revenue_per_hour, 2), "<br>",
+    "Total Revenue: $", total_revenue
+  ),
+  type = "scatter",
+  mode = "markers"
+) %>%
+  layout(
+    title = "Bubble Chart: Volume vs Revenue per Production Hour",
+    xaxis = list(title = "Total Quantity Shipped"),
+    yaxis = list(title = "Revenue per Production Hour ($)")
+  )
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
